--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-backend-server",
+  "name": "tramite-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
