--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "google-auth-library": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
